creator_beta/tests/arch/mips/error/compiler/test_mips_error_compiler_023.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
 	.align 2
 	example:	.byte 	23
   example2:	.half	
    